5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1637_2711.log
== TEST (2019-04-11 11:25:13) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidades de tickets do ru = int(input("Determine a quantidade: "))
valor do tickets = float(input("Valor dos tickets: "))
quatidade de passes de onibus = int(input("Determine a quantidade de passes: "))
valor dos passes = float(input("Valor dos passes: "))

if (valor <= 400):
	mensagem.upper = "suficiente"
	
else:
	mesnsagem.upper = "insuficiente"
-- ERROR:
File "XXXX", line 2
    quantidades de tickets do ru = int(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:54) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade de ticket do ru = int(input("Determine a quantidade: "))
valor do tickets = float(input("Valor dos tickets: "))
quatidade de passes de onibus = int(input("Determine a quantidade de passes: "))
valor dos passes = float(input("Valor dos passes: "))

if (valor <= 400):
	mensagem.upper = "suficiente"
	
else:
	mesnsagem.upper = "insuficiente"
-- ERROR:
File "XXXX", line 2
    quantidade de ticket do ru = int(input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:13) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade de ticket = int(input("Determine a quantidade: "))
valor do tickets = float(input("Valor dos tickets: "))
quatidade de passes de onibus = int(input("Determine a quantidade de passes: "))
valor dos passes = float(input("Valor dos passes: "))

if (valor <= 400):
	mensagem.upper = "suficiente"
	
else:
	mesnsagem.upper = "insuficiente"
-- ERROR:
File "XXXX", line 2
    quantidade de ticket = int(input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:16) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade de ticket = int(input("Determine a quantidade: "))
valor do tickets = float(input("Valor dos tickets: "))
quatidade de passes de onibus = int(input("Determine a quantidade de passes: "))
valor dos passes = float(input("Valor dos passes: "))

if (valor <= 400):
	mensagem.upper = "suficiente"
	
else:
	mesnsagem.upper = "insuficiente"
-- ERROR:
File "XXXX", line 2
    quantidade de ticket = int(input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:34) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade de ticket = float(input("Determine a quantidade: "))
valor do tickets = float(input("Valor dos tickets: "))
quatidade de passes de onibus = int(input("Determine a quantidade de passes: "))
valor dos passes = float(input("Valor dos passes: "))

if (valor <= 400):
	mensagem.upper = "suficiente"
	
else:
	mesnsagem.upper = "insuficiente"
-- ERROR:
File "XXXX", line 2
    quantidade de ticket = float(input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:10) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade_de_ticket = float(input("Determine a quantidade: "))
valor do tickets = float(input("Valor dos tickets: "))
quatidade de passes de onibus = int(input("Determine a quantidade de passes: "))
valor dos passes = float(input("Valor dos passes: "))

if (valor <= 400):
	mensagem.upper = "suficiente"
	
else:
	mesnsagem.upper = "insuficiente"
-- ERROR:
File "XXXX", line 3
    valor do tickets = float(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:46) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade_de_ticket = float(input("Determine a quantidade: "))
valor_do_tickets = float(input("Valor dos tickets: "))
quatidade_de_passes_de_onibus = int(input("Determine a quantidade de passes: "))
valor_dos_passes = float(input("Valor dos passes: "))

if (valor <= 400):
	mensagem.upper = "suficiente"
	
else:
	mesnsagem.upper = "insuficiente"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    mensagem.upper = "suficiente"
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:00) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade_de_ticket = float(input("Determine a quantidade: "))
valor_do_tickets = float(input("Valor dos tickets: "))
quatidade_de_passes_de_onibus = int(input("Determine a quantidade de passes: "))
valor_dos_passes = float(input("Valor dos passes: "))

if (valor <= 400):
	mensagem.upper = "suficiente"
	
else:
	mesnsagem.upper = "insuficiente"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    mensagem.upper = "suficiente"
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:58) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade_de_ticket = float(input("Determine a quantidade: "))
valor_do_tickets = float(input("Valor dos tickets: "))
quatidade_de_passes_de_onibus = int(input("Determine a quantidade de passes: "))
valor_dos_passes = float(input("Valor dos passes: "))

if (valor <= 400):
	mensagem.upper = ("suficiente")
	
else:
	mesnsagem.upper = ("insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    mensagem.upper = ("suficiente")
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:30:27) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade_de_ticket = float(input("Determine a quantidade: "))
valor_do_tickets = float(input("Valor dos tickets: "))
quatidade_de_passes_de_onibus = int(input("Determine a quantidade de passes: "))
valor_dos_passes = float(input("Valor dos passes: "))

if (valor <= 400):
	print.upper = ("suficiente")
	
else:
	print.upper = ("insuficiente")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print.upper = ("suficiente")
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:31:18) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade_de_ticket = float(input("Determine a quantidade: "))
valor_do_tickets = float(input("Valor dos tickets: "))
quatidade_de_passes_de_onibus = int(input("Determine a quantidade de passes: "))
valor_dos_passes = float(input("Valor dos passes: "))

if (valor <= 400):
	print(upper("suficiente"))
	
else:
	print(upper("insuficiente"))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(upper("suficiente"))
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:37:07) 
-- CODE:
valor = int(input("Determine o valor: "))
quantidade_de_ticket = float(input("Determine a quantidade: "))
valor_do_tickets = float(input("Valor dos tickets: "))
quatidade_de_passes_de_onibus = int(input("Determine a quantidade de passes: "))
valor_dos_passes = float(input("Valor dos passes: "))

x = (quantidade_de_ticke * valor_do_tickets) + (quatidade_de_passes_de_onibus * valor_dos_passes)

if (valor >= x):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- EXECUTION TIME:
0.312971
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2711/main.py", line 7, in <module>
    x = (quantidade_de_ticke * valor_do_tickets) + (quatidade_de_passes_de_onibus * valor_dos_passes)
NameError: name 'quantidade_de_ticke' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:40:49) 
-- CODE:
valor = int(input("Determine o valor: "))
qdt = int(input("Determine a quantidade: "))
vt = float(input("Valor dos tickets: "))
qpo = int(input("Determine a quantidade de passes: "))
vdp = float(input("Valor dos passes: "))

x = (qdt * vt) + (qpo * vdp)

if (valor >= x):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- EXECUTION TIME:
0.170809
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
